[gd_scene load_steps=7 format=3 uid="uid://bcp6jwms22xtf"]

[ext_resource type="Script" path="res://assets/stage/base_stage/base_stage.gd" id="1_lx5py"]
[ext_resource type="FontFile" uid="uid://o1jiq4v6yjjt" path="res://core/fonts/GeosansLight.ttf" id="1_qos3b"]
[ext_resource type="Script" path="res://core/managers/gamemanager/game_manager.gd" id="3_l7lqw"]
[ext_resource type="Script" path="res://core/managers/gridmanager/grid_manager.gd" id="4_qa2fy"]
[ext_resource type="Script" path="res://core/managers/gridmanager/PCManager/pc_manager.gd" id="5_16vco"]

[sub_resource type="LabelSettings" id="LabelSettings_jq03s"]
font = ExtResource("1_qos3b")

[node name="BaseStage" type="Node"]
script = ExtResource("1_lx5py")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1270.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -23.0
offset_right = 50.0
grow_horizontal = 2
grow_vertical = 0
text = "TESTING SCENE"
label_settings = SubResource("LabelSettings_jq03s")

[node name="GameManager" type="Node" parent="."]
script = ExtResource("3_l7lqw")

[node name="GridManager" type="Node" parent="."]
script = ExtResource("4_qa2fy")

[node name="PCManager" type="Node" parent="."]
script = ExtResource("5_16vco")
