extends Node
class_name BaseStage

signal game_end
signal game_over

var scene_manager: SceneManager
var game_manager: GameManager
var grid_manager: GridManager

# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
